# Mecanum_drive

./: CMakeLists.txt  README.md  package.xml
config/: mecanum_controllers.yaml
description/: gazebo_cotrol.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py
meshes/: chesi.STL  tyre.STL
